add testimony section with owl carousel

--- a/index.html
+++ b/index.html
@@ -371,23 +371,23 @@
             <div class="col-lg-12 mb-4">
               <h6>Pemanfaatan Insentif</h6>
               <div class="row px-3">
-                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start"><img class="mb-3" src="img/img-bowl-food.svg" alt="">
+                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start text-start"><img class="mb-3" src="img/img-bowl-food.svg" alt="">
                   <h5 class="text-white">88%</h5>
                   <p class="text-white mb-0 fs-7">Kebutuhan Pokok</p>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4"><img class="mb-3" src="img/img-money-hand.svg" alt="">
+                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4 text-start"><img class="mb-3" src="img/img-money-hand.svg" alt="">
                   <h5 class="text-white">67%</h5>
                   <p class="text-white mb-0 fs-7">Sebagai Modal Usaha</p>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4"><img class="mb-3" src="img/img-wifi.svg" alt="">
+                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4 text-start"><img class="mb-3" src="img/img-wifi.svg" alt="">
                   <h5 class="text-white">57%</h5>
                   <p class="text-white mb-0 fs-7">Membeli Paket Data / Internet</p>
                 </div>
-                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4"><img class="mb-3" src="img/img-online-learning.svg" alt="">
+                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4 text-start"><img class="mb-3" src="img/img-online-learning.svg" alt="">
                   <h5 class="text-white">48%</h5>
                   <p class="text-white mb-0 fs-7">Kegiatan Penunjang Belajar Lain</p>
                 </div>
-                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end"><img class="mb-3" src="img/img-external-learning.svg" alt="">
+                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end text-start"><img class="mb-3" src="img/img-external-learning.svg" alt="">
                   <h5 class="text-white">31%</h5>
                   <p class="text-white mb-0 fs-7">Pembelian Pelatihan di Luar Prakerja</p>
                 </div>
@@ -429,9 +429,35 @@
           </div>
         </div>
       </section>
-      <section class="section-course py-3 py-lg-5">
-        <div class="container px-4 px-md-0">
-          <h3>Studi Case </h3>
+      <section class="section-testimony">
+        <div class="container py-3 py-lg-5 px-4 px-md-0">
+          <h4 class="custom-rfs-h4 text-center">Apa Kata Mereka?</h4>
+          <div class="owl-carousel testimony-carousel carousel-auto-height">
+            <div class="testimony-card p-3 d-flex align-items-start">
+              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
+              <div class="testimony-body"> 
+                <p class="m-0 pt-3"><i>Prakerja mendorong peningkatan inklusi keuangan, terutama bagi penerima Prakerja dengan pendidikan SMA ke bawah, penerima yang tinggal di luar Pulau Jawa, atau penerima dengan omzet usaha dan gaji kategori rendah.</i><br><i>Hasil studi ini menunjukkan bahwa 43,8% responden membuka akun e-wallet dan 9,5% responden membuka rekening bank pertama kali karena menjadi penerima Prakerja.”</i></p><span class="testimony-divider"></span>
+                <p> <b>DEFINIT-ADB, 2023</b></p>
+              </div>
+            </div>
+            <div class="testimony-card p-3 d-flex align-items-start">
+              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
+              <div class="testimony-body"> 
+                <p class="m-0 pt-3"><i>
+                    Berdasarkan studi DEFINIT, program Prakerja meningkatkan daya saing penerima dalam meningkatkan peluang mendapatkan pekerjaan (94,7%), meningkatkan keterampilan, kompetensi, dan produktivitas (82,8%), dan meningkatkan motivasi belajar teknologi digital (99,0%). 
+                    Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.”</i></p><span class="testimony-divider"></span>
+                <p> <b>DEFINIT-ADB, 2023</b></p>
+              </div>
+            </div>
+            <div class="testimony-card p-3 d-flex align-items-start">
+              <div class="testimony-header d-flex justify-content-between align-items-center pe-3"><span class="fs-1"><i class="bi bi-quote"></i></span></div>
+              <div class="testimony-body"> 
+                <p class="m-0 pt-3"><i>
+                    “Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.”</i></p><span class="testimony-divider"></span>
+                <p> <b>Poltracking Indonesia 2023</b></p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main><!-- Footer start -->
@@ -527,6 +553,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
+  <script src="js/lib/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"></script>
   <script src="js/function.js"></script>
 </html>
