add table at provinsi

--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -20,8 +20,9 @@
                 </div>
                 <hr/>
                 <p> <i>/ fun fact /</i></p>
-                <div class="h3">
-                   17</div>
+                <div class="outer-funfact bg-o500 text-white"> 
+                  <div class="inner-funfact d-flex align-items-center justify-content-center"><span class="h3 m-0">17</span></div>
+                </div>
                 <p class="fs-7">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
               </div>
             </div>
