--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -88,10 +88,188 @@
               </div>
               <hr>
               <p> <i>/ fun fact /</i></p>
-              <div class="h3">
-                 17</div>
+              <div class="outer-funfact bg-o500 text-white"> 
+                <div class="inner-funfact d-flex align-items-center justify-content-center"><span class="h3 m-0">17</span></div>
+              </div>
               <p class="fs-7">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-4 pt-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row text-center">
+            <h4>Persebaran Penerima</h4>
+            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
+            <table class="table table-hover fs-7 my-4" id="tablePersebaranProvinsi">
+              <thead>
+                <tr>
+                  <th rowspan="2">Provinsi</th>
+                  <th colspan="2">2020</th>
+                  <th colspan="2">2021</th>
+                  <th colspan="2">2022</th>
+                  <th colspan="2">2023</th>
+                  <th colspan="2">2024</th>
+                </tr>
+                <tr>
+                  <td>SK Penetapan      </td>
+                  <td>Aktif</td>
+                  <td>SK Penetapan      </td>
+                  <td>Aktif </td>
+                  <td>SK Penetapan      </td>
+                  <td>Aktif </td>
+                  <td>SK Penetapan      </td>
+                  <td>Aktif </td>
+                  <td>SK Penetapan      </td>
+                  <td>Aktif  </td>
+                </tr>
+              </thead>
+              <tbody> 
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Batanghari</a></td>
+                  <td style="background:rgba(42, 114, 199, .1)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Bungo</a></td>
+                  <td style="background:rgba(42, 114, 199, .15)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Kerinci</a></td>
+                  <td style="background:rgba(42, 114, 199, .2)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"> <a href="#">Kabupaten Merangin</a></td>
+                  <td style="background:rgba(42, 114, 199, .25)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"> <a href="#">Kabupaten Muaro Jambi</a></td>
+                  <td style="background:rgba(42, 114, 199, .3)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Sarolangun</a></td>
+                  <td style="background:rgba(42, 114, 199, .35)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Tanjung Jabung Barat</a></td>
+                  <td style="background:rgba(42, 114, 199, .4)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kabupaten Tebo</a></td>
+                  <td style="background:rgba(42, 114, 199, .45)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kota Jambi</a></td>
+                  <td style="background:rgba(42, 114, 199, .5)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kepulauan Riau</a></td>
+                  <td style="background:rgba(42, 114, 199, 0)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+                <tr> 
+                  <td class="text-start"><a href="#">Kota Sungai Penuh</a></td>
+                  <td style="background:rgba(42, 114, 199, 0)">2</td>
+                  <td style="background:rgba(42, 114, 199, 0)">3</td>
+                  <td style="background:rgba(42, 114, 199, 0)">4</td>
+                  <td style="background:rgba(42, 114, 199, 0)">5</td>
+                  <td style="background:rgba(42, 114, 199, 0)">6</td>
+                  <td style="background:rgba(42, 114, 199, 0)">7</td>
+                  <td style="background:rgba(42, 114, 199, 0)">8</td>
+                  <td style="background:rgba(42, 114, 199, 0)">9</td>
+                  <td style="background:rgba(42, 114, 199, 0)">10</td>
+                  <td style="background:rgba(42, 114, 199, 0)">11</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </section>
