--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="row text-center">
             <h4>Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
-            <table class="table table-hover fs-7 my-4" id="tablePersebaran">
+            <table class="table table-hover fs-7 my-4 display dataTable" id="tablePersebaran">
               <thead>
                 <tr>
                   <th rowspan="2">Provinsi</th>
@@ -94,152 +94,8 @@
                   <td>SK Penetapan      </td>
                   <td>Aktif  </td>
                 </tr>
+                <tbody rowspan="1" colspan="11"></tbody>
               </thead>
-              <tbody> 
-                <tr> 
-                  <td class="text-start"><a href="#">Aceh</a></td>
-                  <td style="background:rgba(42, 114, 199, .1)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Sumatera Utara</a></td>
-                  <td style="background:rgba(42, 114, 199, .15)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Sumatera Barat</a></td>
-                  <td style="background:rgba(42, 114, 199, .2)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"> <a href="#">Riau</a></td>
-                  <td style="background:rgba(42, 114, 199, .25)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"> <a href="#">Jambi</a></td>
-                  <td style="background:rgba(42, 114, 199, .3)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Sumatera Selatan</a></td>
-                  <td style="background:rgba(42, 114, 199, .35)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Bengkulu</a></td>
-                  <td style="background:rgba(42, 114, 199, .4)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Lampung</a></td>
-                  <td style="background:rgba(42, 114, 199, .45)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Kep. Bangka Belitung</a></td>
-                  <td style="background:rgba(42, 114, 199, .5)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Kepulauan Riau</a></td>
-                  <td style="background:rgba(42, 114, 199, 0)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-                <tr> 
-                  <td class="text-start"><a href="#">Palembang</a></td>
-                  <td style="background:rgba(42, 114, 199, 0)">2</td>
-                  <td style="background:rgba(42, 114, 199, 0)">3</td>
-                  <td style="background:rgba(42, 114, 199, 0)">4</td>
-                  <td style="background:rgba(42, 114, 199, 0)">5</td>
-                  <td style="background:rgba(42, 114, 199, 0)">6</td>
-                  <td style="background:rgba(42, 114, 199, 0)">7</td>
-                  <td style="background:rgba(42, 114, 199, 0)">8</td>
-                  <td style="background:rgba(42, 114, 199, 0)">9</td>
-                  <td style="background:rgba(42, 114, 199, 0)">10</td>
-                  <td style="background:rgba(42, 114, 199, 0)">11</td>
-                </tr>
-              </tbody>
             </table>
           </div>
         </div>
@@ -554,7 +410,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
-  <script src="js/lib/owl.carousel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"> </script>
   <script src="js/function.js"></script>
 </html>
