--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="section-course py-4 pt-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4>Persebaran Penerima</h4>
+            <h4 class="custom-rfs-h4">Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
             <table class="table table-hover fs-7 my-4 display dataTable" id="tablePersebaran">
               <thead>
@@ -102,7 +102,7 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4 class="mb-4">Profil Penerima</h4>
+            <h4 class="mb-4 custom-rfs-h4">Profil Penerima</h4>
             <div class="col-lg-6">
               <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
                 <div class="text-start">
@@ -132,7 +132,7 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4 class="mb-3">Inklusivitas</h4>
+            <h4 class="mb-3 custom-rfs-h4">Inklusivitas</h4>
             <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
               <div>
                 <h4 class="display-4 text-white">3%</h4>
@@ -164,7 +164,7 @@
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <div class="col-12">
-              <h4 class="mb-3">Lembaga Pelatihan</h4>
+              <h4 class="mb-3 custom-rfs-h4">Lembaga Pelatihan</h4>
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
@@ -184,9 +184,7 @@
             </div>
             <div class="col-lg-6 mb-4">
               <div class="border rounded-3 p-3">
-                <div class="p-3 flex-coloumn">
-                  <h5>Preferensi Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
-                </div>
+                <h5 class="mb-4">Preferensi Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
               </div>
             </div>
             <div class="col-lg-12 mb-4">
@@ -221,11 +219,11 @@
           <div class="row text-center">
             <h4 class="mb-4">Insentif</h4>
             <div class="col-lg-12 mb-4">
-              <h6>Rekening Penerimaan Insentif</h6>
+              <h5>Rekening Penerimaan Insentif</h5>
               <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
             </div>
             <div class="col-lg-12 mb-4">
-              <h6>Pemanfaatan Insentif</h6>
+              <h5>Pemanfaatan Insentif</h5>
               <div class="row px-3">
                 <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start text-start"><img class="mb-3" src="img/img-bowl-food.svg" alt="">
                   <h5 class="text-white">88%</h5>
@@ -250,11 +248,11 @@
               </div>
             </div>
             <div class="col-lg-12 mb-4">
-              <h6>Manfaat yang dirasakan setelah mengikuti Program Prakerja</h6>
+              <h5>Manfaat yang dirasakan setelah mengikuti Program Prakerja</h5>
               <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
             </div>
             <div class="col-lg-12 mb-4">
-              <h6>Pemanfaatan Insentif</h6>
+              <h5>Pemanfaatan Insentif</h5>
               <div class="row gap-0 d-flex align-items-end">
                 <div class="col-lg-3 m-0 p-0">
                   <div class="p-4 bg-b600 text-start">
@@ -410,6 +408,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.bootstrap5.js"></script>
+  <script src="js/lib/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"> </script>
   <script src="js/function.js"></script>
 </html>
