--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -489,7 +489,7 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4 class="mb-3">Inklusivitas</h4>
+            <h4 class="mb-3 custom-rfs-h4">Inklusivitas</h4>
             <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
               <div>
                 <h4 class="display-4 text-white">3%</h4>
@@ -611,6 +611,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
   <script src="https://cdn.datatables.net/2.1.4/js/dataTables.bootstrap5.js"></script>
+  <script src="../js/lib/owl.carousel.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"> </script>
   <script src="../js/function.js"></script>
 </html>
