improve mobile friendly

--- a/html/provinsi/section_main_content.html
+++ b/html/provinsi/section_main_content.html
@@ -6,13 +6,10 @@
         <div class="list-group" id="listCity"><a class="list-group-item list-group-item-action active" href="#" aria-current="true">Semua Kabupaten / Kota</a><a class="list-group-item list-group-item-action disabled" href="#" aria-disabled="aria-disabled">Memuat Kota / Kabupaten...</a></div>
       </div>
       <div class="col-lg-9">
-        <section class="pt-3 pb-4"> 
+        <section class="section-course">
           <div class="container"> 
-            <div class="row bg-s100 rounded-3" style="min-height:320px"> 
-              <div class="col-lg-8"> 
-                <p>Map Canvas </p>
-              </div>
-              <div class="col-lg-4 bg-s200 p-3">
+            <div class="row d-flex flex-row-reverse">
+              <div class="col-lg-4 bg-s200 p-4">
                 <div>
                   <div class="h6">Provinsi</div>
                   <h1>Jambi </h1>
@@ -23,7 +20,10 @@
                 <div class="outer-funfact bg-o500 text-white"> 
                   <div class="inner-funfact d-flex align-items-center justify-content-center"><span class="h3 m-0">17</span></div>
                 </div>
-                <p class="fs-7">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
+                <p class="fs-7 mt-2">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
+              </div>
+              <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
+                <p>Map Canvas </p>
               </div>
             </div>
           </div>
