--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
                 <div class="text-start">
                   <h6 class="h1 text-primary">18.887.737</h6>
-                  <p class="mb-0">Total Penerima Program</p>
+                  <p class="mb-0">Total Penerima Aktif Program</p>
                 </div>
               </div>
               <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia">
@@ -117,20 +117,29 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
-              <div id="jenisKelamin" style="height:300px"></div>
+            <div class="col-lg-6 mb-4">
+              <div class="border p-3 w-100 rounded">
+                <h5 class="mb-3">Jenis Kelamin</h5>
+                <div id="jenisKelamin" style="height:300px"></div>
+              </div>
             </div>
             <div class="col-lg-6">
-              <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+              <div class="border p-3 w-100 rounded">
+                <h5 class="mb-3">Umur</h5>
+                <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+              </div>
             </div>
             <div class="col-lg-6">
-              <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+              <div class="border p-3 w-100 rounded">
+                <h5 class="mb-3">Pendidikan Terakhir</h5>
+                <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+              </div>
             </div>
           </div>
         </div>
       </section>
       <section class="section-course py-3 py-lg-5">
-        <div class="container px-4 px-md-0">
+        <div class="container">
           <div class="row text-center">
             <h4 class="mb-3 custom-rfs-h4">Inklusivitas</h4>
             <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
