--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -74,13 +74,10 @@
           </nav>
         </div>
       </section>
-      <section class="pt-3 pb-4"> 
+      <section class="section-course">
         <div class="container"> 
-          <div class="row bg-s100 rounded-3" style="min-height:320px"> 
-            <div class="col-lg-8"> 
-              <p>Map Canvas </p>
-            </div>
-            <div class="col-lg-4 bg-s200 p-3">
+          <div class="row d-flex flex-row-reverse">
+            <div class="col-lg-4 bg-s200 p-4">
               <div>
                 <div class="h6">Provinsi</div>
                 <h1>Jambi </h1>
@@ -91,7 +88,10 @@
               <div class="outer-funfact bg-o500 text-white"> 
                 <div class="inner-funfact d-flex align-items-center justify-content-center"><span class="h3 m-0">17</span></div>
               </div>
-              <p class="fs-7">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
+              <p class="fs-7 mt-2">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
+            </div>
+            <div class="col-lg-8 bg-s100 p-4" style="min-height:320px"> 
+              <p>Map Canvas </p>
             </div>
           </div>
         </div>
@@ -487,7 +487,7 @@
         </div>
       </section>
       <section class="section-course py-3 py-lg-5">
-        <div class="container px-4 px-md-0">
+        <div class="container">
           <div class="row text-center">
             <h4 class="mb-3 custom-rfs-h4">Inklusivitas</h4>
             <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
