fix auto height layout

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4 class="mb-4 custom-rfs-h4">Profil Penerima</h4>
-            <div class="col-lg-6">
-              <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
+            <div class="col-lg-6 d-flex flex-column">
+              <div class="border p-4 d-flex rounded-3 gap-3 mb-4 h-100 align-items-center"><img src="img/img-people.svg" alt="">
                 <div class="text-start">
                   <h6 class="h1 text-primary">18.887.737</h6>
                   <p class="mb-0">Total Penerima Aktif Program</p>
                 </div>
               </div>
-              <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia">
+              <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia h-100 align-items-center">
                 <div class="text-start">
                   <h6 class="h1 text-primary">100%</h6>
                   <p class="mb-0">Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.</p>
